--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                 border-radius: 6px;
                 -webkit-box-shadow: 1px 1px 16px 1px #442;
                 box-shadow: 1px 1px 16px 1px #442;
-                background-color: rgb(224, 196, 196);
+                background-color: rgb(153, 0, 153);
             }
 
             .casuta .interior {
-                color: #333;
+                color: #fff;
                 text-align: center;
             }
 
@@ -127,7 +127,7 @@
                 font-weight: 500;
                 font-size: 19.2px;
                 font-size: 1.2rem;
-                color: #666;
+                color: #fff;
                 line-height: 1.4;
             }
 
@@ -136,7 +136,7 @@
                 font-size: 11.2px;
                 font-size: .7rem;
                 font-style: italic;
-                color: #666;
+                color: #fff;
                 line-height: 1.4;
             }
 
@@ -153,7 +153,7 @@
             }
 
             .casuta .sectiune .oana_urmareste .a:hover {
-                color: #333;
+                color: #fff;
             }
 
             @media (min-width: 480px) {
@@ -231,7 +231,7 @@
 
                             <div class="oana_urmareste">
                                 <a href="https://www.instagram.com/oanaa_09/">
-                                    <i class="fab fa-instagram" style="color:#333;"></i>
+                                    <i class="fab fa-instagram" style="color:#fff;"></i>
                                 </a>
                             </div>
 
