--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 border-radius: 6px;
                 -webkit-box-shadow: 1px 1px 16px 1px #442;
                 box-shadow: 1px 1px 16px 1px #442;
-                background-color: rgb(153, 0, 153);
+                background: linear-gradient(135deg, #d10000 0, #d10000 30%, #212629 100%) fixed;
             }
 
             .casuta .interior {
